my-intel-simics-project-1/logs/test/win64/modules/dmlc/test/scratch/1.2/errors/ENBOOL/T_ENBOOL-struct.h.tmp
/* Generated by dmlc, do not edit! */

#ifndef T_ENBOOL_STRUCT_H
#define T_ENBOOL_STRUCT_H

typedef struct etype etype_t;

conf_class_t *_initialize_T_ENBOOL(void);


#endif /* not T_ENBOOL_STRUCT_H */
